add: initiate project for url shortener app

--- a/weather-app/.env
+++ b/weather-app/.env
@@ -1,5 +1,5 @@
 PORT=10001
-WEATHER_API_KEY=[REDACTED]
+WEATHER_API_KEY=MDTUSUFHYVQPXPF6HBVNH48N9
 WEATHER_APP_BASE_URL=https://weather.visualcrossing.com/VisualCrossingWebServices/rest/services/timeline
 REDIS_HOST=redis
 REDIS_PORT=6379
